# protobuf-over-tcpsocket-example

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  clean.sh  client.cc  messages.pb.cc  messages.pb.h  messages.proto  server.cc
.github/workflows/: ccpp.yml
proto/: CMakeLists.txt  messages.proto
